--- a/sites/all/themes/aap_theme/sass/_layout.scss
+++ b/sites/all/themes/aap_theme/sass/_layout.scss
@@ -8,6 +8,10 @@
  ******************************************************************************/
 @import "compass/css3/images";
 
+body.admin-menu #admin-menu {
+  z-index: 9999;
+}
+
 .splash-region {
 	.panel-pane {
 		margin: 0 auto;
@@ -31,7 +35,7 @@
   padding-left: 8em;
   padding-right: 10em;
   margin-left: 0em;
-  z-index: 9999;
+  z-index: 9990;
   background: white;
   border-bottom: 1px solid green;
   position: fixed;
